[project]
name = "py-class"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  # --- Core environment ---
  "ipykernel",
  "jupyterlab",
  "IPython",
  
  # --- Data handling ---
  "pandas",
  "numpy<2.0",
  "scipy",
  "openpyxl",
  "pyarrow",
  "orjson",
  
  # --- Visualization (minimal) ---
  "matplotlib",
  "seaborn",
  "wordcloud",
  
  # --- Wikipedia & MediaWiki ---
  "wikipedia-api",
  "mwparserfromhell",
  "wikitextparser",
  "mwclient",
  
  # --- Text & NLP ---
  "beautifulsoup4",
  "lxml",
  "regex",
  "unidecode",
  "nltk",
  "textblob",
  "textstat",
  "dateparser",
  
  # --- Statistics & Time Series ---
  "statsmodels",
  
  # --- Machine Learning ---
  "scikit-learn",
  
  # --- Transformers & Embeddings ---
  "transformers",
  "torch",
  "sentence-transformers",
  "gensim",
  "fasttext-wheel",
  
  # --- Network analysis ---
  "networkx",
  
  # --- Multimodal ---
  "pillow",
  
  # --- Web & APIs ---
  "requests",
  "httpx",
  
  # --- File formats ---
  "python-docx",
  "pdfplumber",
  
  # --- Utilities ---
  "tqdm",
  "nbformat",
  "ydata-profiling",
]

[tool.uv]
